BS5 - Stream Overflow - https://github.com/humhub/humhub-internal/issues/740 (#7600)

--- a/static/scss/_comment.scss
+++ b/static/scss/_comment.scss
@@ -183,8 +183,6 @@ div.nested-comments-root {
 
             .nav-pills.preferences {
                 display: none;
-                top: 8px;
-                right: 0;
             }
         }
     }
